# cookiecutter-cxx-software

./: License  README.md  cookiecutter.json  environment.yaml
hooks/: post_gen_project.bash
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  AUTHORS  Makefile.am  README.md  configure.ac  environment.yaml  {{cookiecutter.repo_name}}-{{cookiecutter.version}}.pc.in  {{cookiecutter.repo_name}}.doxyfile
{{cookiecutter.repo_name}}/fileinterface/: AUTHORS  COPYING  Makefile.am  README  configure.ac  fileinterface-1.0.0.pc.in
{{cookiecutter.repo_name}}/fileinterface/fileinterface/: fileinterface.h  fileinterface_reader.h  fileinterface_reader_bzip2.cc  fileinterface_reader_bzip2.h  fileinterface_reader_flat.cc  fileinterface_reader_flat.h  fileinterface_reader_gzip.cc  fileinterface_reader_gzip.h  fileinterface_reader_parent.h  fileinterface_writer.h  fileinterface_writer_bzip2.cc  fileinterface_writer_bzip2.h  fileinterface_writer_flat.cc  fileinterface_writer_flat.h  fileinterface_writer_gzip.cc  fileinterface_writer_gzip.h  fileinterface_writer_parent.h  helper.h
{{cookiecutter.repo_name}}/finter/: AUTHORS  COPYING  Makefile.am  README  configure.ac
{{cookiecutter.repo_name}}/finter/finter/: finter.h  finter_reader.h  finter_reader_bzip2.cc  finter_reader_bzip2.h  finter_reader_flat.cc  finter_reader_flat.h  finter_reader_gzip.cc  finter_reader_gzip.h  finter_reader_parent.h  finter_writer.h  finter_writer_bzip2.cc  finter_writer_bzip2.h  finter_writer_flat.cc  finter_writer_flat.h  finter_writer_gzip.cc  finter_writer_gzip.h  finter_writer_parent.h  helper.h
{{cookiecutter.repo_name}}/finter/m4/: ax_check_bzip2.m4  ax_check_zlib.m4
{{cookiecutter.repo_name}}/unit_tests/: boost_example_test.cc  boost_main.cc  example_test.cc  google_example_test.cc  main.cc
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: cargs.cc  cargs.h  main.cc
